<?xml version="1.0"?>
<package>
  <name>creative_interactive_gesture_camera</name>
  <version>0.0.1</version>
  <description>The creative_interactive_gesture_camera package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/creative_interactive_gesture_camera</url>
  <url type="butracker">https://github.com/davetcoleman/creative_interactive_gesture_camera/issues</url>
  <url type="repository">https://github.com/davetcoleman/creative_interactive_gesture_camera/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libg2o</build_depend>

  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>image_view</run_depend>

  <export>
  </export>
</package>